2025-05-06T01:20:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14849647784 # 635
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-06
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 982 1462 / 993 1473
* notice: next accum: outdated-unq outdated-all / unq all: 983 1463 / 994 1474
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-22] / [2025-05-05]

2025-05-05T01:23:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14827245800 # 634
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 979 1459 / 992 1472
* notice: next accum: outdated-unq outdated-all / unq all: 982 1462 / 993 1473
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-20 2025-04-21] / [2025-05-04]

2025-05-04T01:27:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816393106 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 977 1457 / 991 1471
* notice: next accum: outdated-unq outdated-all / unq all: 979 1459 / 992 1472
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-19] / [2025-04-20 2025-05-03]

2025-05-02T01:20:17Z: