@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-06T01:20:41Z",
-  "count_outdated" : 1463,
-  "uniques_outdated" : 983,
-  "count" : 1474,
-  "uniques" : 994,
+  "timestamp" : "2025-05-07T01:21:21Z",
+  "count_outdated" : 1464,
+  "uniques_outdated" : 984,
+  "count" : 1475,
+  "uniques" : 995,
   "clones" : [
-    {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
