@@ -1,12 +1,7 @@
 {
   "count": 11,
-  "uniques": 2,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
