@@ -1,3 +1,12 @@
+2025-05-07T01:21:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14873031132 # 636
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-07
+* notice: last 14d: unq all: 1 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 983 1463 / 994 1474
+* notice: next accum: outdated-unq outdated-all / unq all: 984 1464 / 995 1475
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-23] / [2025-05-06]
+
 2025-05-06T01:20:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14849647784 # 635
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-06
